# 3D_GDM-RSON

./: README.md  check_multiprocessing.py  dateset_description.txt  dual_pipeline.py  episodic_gwr.py  gdm_demo.py  preprocessing.py  requirements.txt  test2.rviz
CNN/: Readme.md  c_grconv.py  c_grconv_4.py  c_grconv_5.py  custom_model_training.py  grconvnet.py  model_training.py  train_network.py
CNN/pretrained_model/: readme.txt
GDM_learning/: episodic_gwr.py  experiments.txt  gdm_learning.py  grasp_gdm.py  object_recog_grasp_from_file.py  preprocessing.py  std_cmp_plot.py  std_plot.py  test_m_grasp.py
G_GDM/: episodic_gwr.py  experiments.txt  gdm_learning.py  grasp_gdm.py  objrecog_grasp_from_file.py  preprocessing.py  std_plot.py
Grasping/: README.md  grasp_generator.py
Grasping/environment/: env.py
archive/: Core50_GDM.ipynb  core50_gdm.py  core50_gdm1.py  episodic_gwr1.py  gammagwr.py  gtls.py
bounding_box_server/: CMakeLists.txt  package.xml
bounding_box_server/include/bounding_box_server/: bounding_box_server.h
bounding_box_server/msg/: BoundingBox.msg
bounding_box_server/src/: bounding_box_publisher.cpp  bounding_box_server_common.cpp  bounding_box_server_node.cpp
dataset_generation/: Readme.md  dateset_description.txt  rviz_window1.rviz  rviz_window2.rviz
dataset_generation/pcl_pkg/: package.xml
dataset_generation/sim_world/: CMakeLists.txt
dataset_generation/spawn_models/: CMakeLists.txt  check_pts.py  package.xml
point_cloud_functions/: CMakeLists.txt  package.xml
point_cloud_functions/launch/: point_cloud_functions_sim.launch  voxel.launch
point_cloud_functions/scripts/: annotate.py  get_surface.py  test_get_roi.py
point_cloud_functions/src/: point_cloud_functions.cpp  point_cloud_functions_node.cpp  point_cloud_functions_transform.cpp
point_cloud_functions/srv/: GetClosestPoint.srv  GetObjectROI.srv  GetPlanarCoefficients.srv  VoxelizePointCloud.srv
sim_world/: package.xml
sim_world/urdf/: body.xacro
sim_world/world/: model.world  model_bk.world
spawn_models/scripts/: add_model.py  generate_data.py  shapenet_add_model.py  (+3 more)
(+152 files in other folders)
